RESOLVED FIXED216991
%TypedArray%.{from, of} no longer perform AllocateTypedArray
https://bugs.webkit.org/show_bug.cgi?id=216991
Summary %TypedArray%.{from, of} no longer perform AllocateTypedArray
Ross Kirsling
Reported 2020-09-25 14:08:11 PDT
%TypedArray%.{from, of} no longer perform AllocateTypedArray
Attachments
Patch (18.12 KB, patch)
2020-09-25 14:15 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2020-09-25 14:15:17 PDT
Yusuke Suzuki
Comment 2 2020-09-25 14:19:58 PDT
Comment on attachment 409737 [details] Patch r=me
EWS
Comment 3 2020-09-25 15:55:00 PDT
Committed r267603: <https://trac.webkit.org/changeset/267603> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409737 [details].
Radar WebKit Bug Importer
Comment 4 2020-09-25 15:55:17 PDT
Alexey Shvayka
Comment 5 2020-10-18 14:45:14 PDT
*** Bug 181011 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.