%TypedArray%.{from, of} no longer perform AllocateTypedArray https://bugs.webkit.org/show_bug.cgi?id=216991

Reviewed by Yusuke Suzuki.

JSTests:

* stress/typedarray-of.js:
Fix test.

* test262/expectations.yaml:
Mark twelve test cases as passing.

Source/JavaScriptCore:

Back in ES2015, %TypedArray%.of and %TypedArray%.from appear to have been based on the abstract operation
AllocateTypedArray, which involved crawling the prototype chain to find the appropriate constructor and
only permitted `this` to be a (derived) typed array.

This appears to have gone away as of ES2016 -- we simply expect `this` to be a constructor and verify that it
produced a typed array (of sufficient length).

* builtins/BuiltinNames.h:
* builtins/TypedArrayConstructor.js:
(of):
(from):
(allocateInt8Array): Deleted.
(allocateInt16Array): Deleted.
(allocateInt32Array): Deleted.
(allocateUint32Array): Deleted.
(allocateUint16Array): Deleted.
(allocateUint8Array): Deleted.
(allocateUint8ClampedArray): Deleted.
(allocateFloat32Array): Deleted.
(allocateFloat64Array): Deleted.
* runtime/JSGenericTypedArrayViewConstructor.h:
* runtime/JSGenericTypedArrayViewConstructorInlines.h:
(JSC::JSGenericTypedArrayViewConstructor<ViewClass>::finishCreation):
(JSC::JSGenericTypedArrayViewConstructor<ViewClass>::create):
* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):


Canonical link: https://commits.webkit.org/229775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267603 268f45cc-cd09-0410-ab3c-d52691b4dbfc